erDiagram
    %% Геймификация и компетенции

    users ||--o{ volunteer_profiles : user_id
    users ||--o{ volunteer_achievements : user_id
    achievements ||--o{ volunteer_achievements : achievement_id
    volunteer_profiles ||--o{ volunteer_skills : volunteer_profile_id
    skills ||--o{ volunteer_skills : skill_id
    users ||--o{ points_transactions : user_id
    achievements ||--o{ points_transactions : achievement_id
    achievements ||--o{ achievement_rules : achievement_id

    achievement_rules {
        uuid id
        uuid achievement_id
        text code
        text trigger_type
        numeric threshold
        integer points
    }

    achievements {
        uuid id
        text code
        text name
        text icon
        integer points_reward
    }

    points_transactions {
        uuid id
        uuid user_id
        uuid achievement_id
        text source_type
        uuid source_id
        integer points
        text reason
    }

    skills {
        uuid id
        text name
    }

    users {
        uuid id
        text email
        text first_name
        text last_name
    }

    volunteer_achievements {
        uuid id
        uuid user_id
        uuid achievement_id
        timestamptz earned_at
    }

    volunteer_profiles {
        uuid id
        uuid user_id
        text city
        integer points
        integer level
        text status
    }

    volunteer_skills {
        uuid volunteer_profile_id
        uuid skill_id
    }
